# stopments

./: .gitignore  .pre-commit-config.yaml  README.md  embed.py  go.mod  pyproject.toml  stopment.go  stopment_test.go  stopments.go  stopments_test.go
.github/workflows/: release.yaml  test.yaml  update.yaml
src/stopments/: __init__.py  __version__.py  conv.py  elements.py  scalar.py
src/stopments/embed/: __init__.py  favicon.py  styles.py  web_components.py
src/stopments/static/: scalar-api-reference.js  web-components.min.js
tests/: fastapi_test.py  scalar_test.py  version_test.py
