[project]
name = "stopments"
version = "0.1.0"
description = "Stoplight elements html"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
dependencies = []
readme = "README.md"
requires-python = ">=3.9"
license.text = "BSD-2-Clause"
keywords = ["stoplight", "elements", "openapi", "swagger"]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]

[project.urls]
Repository = "https://github.com/Bing-su/stopments"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-sugar", "fastapi"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
universal = true
dev-dependencies = ["ruff", "pre-commit-uv", "uvicorn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
