[project]
name = "stopments"
version = "25.12.1"
description = "Stoplight elements html"
readme = "README.md"
requires-python = ">=3.9"
license.text = "BSD-2-Clause"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
keywords = ["elements", "openapi", "stoplight", "swagger"]
classifiers = [
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
]
dependencies = []

[project.urls]
Repository = "https://github.com/Bing-su/stopments"

[dependency-groups]
dev = ["fastapi", "httpx", "uvicorn"]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "pytest-xdist",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501", "PLR2004"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.uv]
default-groups = ["dev", "test"]
